style: fixed font-size on small screen

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ nav {
   width: 100%;
   height: 6vh;
   background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer {
@@ -22,14 +25,14 @@ footer {
   width: 100%;
   height: 6vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 footer a {
   text-decoration: none;
   color: #333;
-  font-weight: 700;
+  font-weight: 300;
   font-size: 1.5rem;
 }
 
@@ -38,8 +41,6 @@ footer a:hover {
 }
 
 .author {
-  left: 3%;
-  position: absolute;
   padding: .89rem 1rem;
   -webkit-transition: 300ms;
   transition: 300ms;
@@ -79,7 +80,7 @@ footer a:hover {
   border: 2px solid #fff;
   color: #fff;
   font-weight: 700;
-  font-size: 1.3rem;
+  font-size: 3vmin;
   letter-spacing: 2px;
   cursor: pointer;
   transition: 0.2s ease-in;
@@ -98,7 +99,7 @@ footer a:hover {
   height: 80vh;
   width: 80%;
   color: #fff;
-  font-size: 4em;
+  font-size: 8vmin;
   text-align: center;
   display: none;
   transition: 500ms;
